--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "vite": "^7.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -34,7 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "vite": "^7.1.12"
+    "tailwindcss": "^4.1.16"
   }
 }
